--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # A senha do servidor que a Rayssa criou foi padrão, recomendo você criar um servidor padrão também
 
-# DATABASE_URL="postgresql://<HOST>:<SENHA>@localhost:<PORTA>/cemiterio?schema=public"
+# DATABASE_URL="postgresql://<HOST>:<SENHA>@localhost:<PORTA>/cemiterio"
 # Pra conseguir os valores de <HOST>, <SENHA> e <PORTA>, acesse o PgAdmin e vá em:
 #                            Propriedades -> Conexão clicando no servidor que você criou pra database.
 
