endpoints de leitura feitos

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@
 # Pra conseguir os valores de <HOST>, <SENHA> e <PORTA>, acesse o PgAdmin e vá em:
 #                            Propriedades -> Conexão clicando no servidor que você criou pra database.
 
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/cemiterio"
+DATABASE_URL="postgresql://postgres:jungkook@localhost:5432/cemiterio"
 
 
 
